# RTC-Anything

./: .gitignore  LICENSE  README.md  README_zh.md  pyproject.toml
configs/: example_config.yaml
src/: dual_piper_deploy.py  single_piper_deploy.py
src/utils/: __init__.py  policy_client.py  real_time_chunking.py
task_suites/: clothes_folding.md  clothes_folding_zh.md  object_sweeping.md  object_sweeping_zh.md  table_cleaning.md  table_cleaning_zh.md
